--- a/catering/src/Styles/Navbar.css
+++ b/catering/src/Styles/Navbar.css
@@ -3,12 +3,20 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-left: 10vh;
-    margin-right: 20vh;
+    width: 100%;
+    border-bottom: 2px solid black;
+}
+
+.logo {
+    font-weight: bold;
+    padding-left: 5%;
 }
 
 .nav-links {
     display: flex;
     flex-direction: row;
     gap: 20px;
+    padding-right: 5%;
+    font-weight: bold;
+    color: black;
 }
