--- a/catering/src/Styles/Catering.css
+++ b/catering/src/Styles/Catering.css
@@ -106,6 +106,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 30vh;
 }
 
 .menu-title {
@@ -119,5 +120,57 @@
     /* font-size: 1.5rem; */
     width: 60%;
     text-align: center;
-    margin-bottom: 5px;
+}
+
+.menu-bottom-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.menu-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 90%;
+    height: 70vh;
+}
+
+.reviews-gallery-section {
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFAF5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 10px;
+}
+
+.reviews-section {
+    width: 85%;
+    height: 40vh;
+    border-bottom: 2px solid #51591B;
+    border-top: 2px solid #51591B;
+}
+
+.gallery-section {
+    width: 85%;
+    height: 40vh;
+    border-bottom: 2px solid #51591B;
+    border-top: 2px solid #51591B;
+}
+
+.contact-section {
+    width: 100%;
+    height: 80vh;
+    background-color: #51591B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
 }
