--- a/catering/src/Styles/menuItem.css
+++ b/catering/src/Styles/menuItem.css
@@ -7,6 +7,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.menu-item-image {
+    width: 100%;
+    height: 45%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.menu-item-title {
+    font-size: 1.75rem;
+    margin: 10px 0 5px 0;
+    color: #F3C83A;
+    position: relative;
+    z-index: 2;
+    margin-top: -1.2rem;
+}
+
+.menu-title-accent {
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+}
+
+.menu-title-accent::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 110%;
+    height: 110%;
+    background-color: #FF4145;
+    z-index: -1;
+    border-radius: 10px;
+}
+
+.menu-item-description {
+    /* font-size: 1rem; */
+    text-align: center;
+    padding: 0 10px;
+    font-weight: bold;
+    color: #51591B;
+    white-space: pre-line;
 }
