--- a/catering/src/Styles/Catering.css
+++ b/catering/src/Styles/Catering.css
@@ -1,5 +1,19 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .body{
     background-color: #FFFAF5;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #51591B;
+  text-decoration: none;
 }
 
 .home-container {
@@ -26,6 +40,7 @@
     position: relative;
     display: inline-block;
     z-index: 1;
+    max-width: 95%;
 }
 
 .hero-title-accent::after {
