Finished designs for gallery and reviews

--- a/catering/src/Styles/gallery.css
+++ b/catering/src/Styles/gallery.css
@@ -72,3 +72,10 @@
   font-weight: bold;
   color: #51591B;
 }
+
+.gallery-image {
+  width: 60%;
+  height: 40vh;
+  object-fit: cover;
+  border-radius: 15px;
+}
